# Apex-Yolov5-TensorRT-ai-aimcore

./: .gitignore  README.md  label.txt  screen.py  trainInterface.py
Cpp-DirectX-DesktopDuplication-master/: DirectXDesktopDuplication.sln  README.md
Cpp-DirectX-DesktopDuplication-master/DirectX11app/: DirectX11app.vcxproj  DirectX11app.vcxproj.filters  PixelShader.hlsl  graphics.h  main.cpp  resource.h  window.cpp  window.h
D3DShot-0.1.5/: test.py
D3DShot-0.1.5/d3dshot/: capture_output.py  d3dshot.py
DXGICaptureApp-master/DXGIConsoleApplication/: DXGIConsoleApplication.cpp  DXGIConsoleApplication.vcxproj  DXGIConsoleApplication.vcxproj.filters
Simple-DXGI-Screen-Capture-master/: DXGICaptor.h  Project2-DXGI.sln  README.md
aimcore/: aim.py  cut.py  ghub_mouse.py  main.py  main_thread.py  main_thread2.py  mice_thread.py  mouseController.py  mouse_pid.py  pid.py  python_trt.py  screencap.py  test_thread2.py  yolov5.lib
dxgl/: test.py
dxgl-master/: ReadMe.md  dxgl.sln
pyDXGID3D-master/: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  DesktopDuplication.py  OutputManager.py  PixelShader.py  README.md  ThreadManager.py  VertexShader.py  pyproject.toml
pyDXGID3D-master/Direct3D/: __init__.py
pyDXGID3D-master/Direct3D/PyIdl/: d3d11.py  d3d11sdklayers.py  d3dcommon.py  dxgi.py  dxgi1_2.py  dxgicommon.py  dxgidebug.py  dxgiformat.py  dxgitype.py
python-aimcore/: screenshot.py
python-tensorrt/: test.py
pythonDXGI/: cut.py  tensorrt.py
yolov5/: cut.py  gen_wts.py  python_trt.py  requirements.txt  screen.py  test.py  test2.py  val.py
(+206 files in other folders)
